Ajuste no retorno das respostas.

--- a/AppConverter/templates/index.html
+++ b/AppConverter/templates/index.html
@@ -21,7 +21,7 @@
                         $('#resultado').html(response.resultado);
                     },
                     error: function(xhr, status, error) {
-                        $('#resultado').html('Ocorreu um erro: ' + xhr.responseText);
+                        $('#resultado').html('Entrada inválida');
                     }
                 });
             });
