Ajustes na validação de dados e tratamento de erros

--- a/AppConverter/templates/index.html
+++ b/AppConverter/templates/index.html
@@ -21,7 +21,8 @@
                         $('#resultado').html(response.resultado);
                     },
                     error: function(xhr, status, error) {
-                        $('#resultado').html('Entrada inválida');
+                        var response = JSON.parse(xhr.responseText);
+                        $('#resultado').html(response.erro);
                     }
                 });
             });
